...
    final product = ref
        .read(productsControllerProvider.notifier)
        .byId(productId);

    return Scaffold(
      appBar: AppBar(
        title: const Text('Detalle del producto'),
        leading: IconButton(
          tooltip: 'Volver',
          onPressed: () => context.go('/products'),
          icon: const Icon(Icons.arrow_back),
        ),
      ),
...
